Get X-Hub-Signature working for pubsub server

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "babel-preset-es2015": "^6.22.0",
         "body-parser": "^1.18.2",
         "cookie-parser": "^1.4.3",
-        "crypto": "^1.0.1",
         "css-loader": "^0.26.2",
         "ejs": "^2.5.7",
         "eslint": "^3.17.0",
@@ -67,6 +66,7 @@
         "properjs-scroll2": "~0.2",
         "properjs-scrollcontroller": "~0.2",
         "properjs-slacker": "^0.1.4",
+        "properjs-stagger": "^0.2.1",
         "properjs-template": "~0.2",
         "properjs-throttle": "^0.3.0",
         "properjs-tween": "~0.2",
